--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "type": "module",
   "version": "1.0.0",
   "scripts": {
-    "dev": "wix dev",
-    "build": "wix build",
-    "preview": "wix preview",
-    "release": "wix release",
-    "env": "wix env pull",
+    "dev": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview",
     "check": "npx astro check --js-only",
     "test:run": "vitest run"
   },
   "dependencies": {
     "@astrojs/check": "0.9.4",
-    "@astrojs/cloudflare": "12.5.5",
+    "@astrojs/node": "^9.5.2",
     "@astrojs/react": "4.3.0",
     "@astrojs/tailwind": "6.0.2",
     "@hello-pangea/dnd": "18.0.1",
@@ -50,54 +48,11 @@
     "@tailwindcss/container-queries": "0.1.1",
     "@tailwindcss/typography": "0.5.16",
     "@tailwindcss/vite": "4.1.11",
-    "@typescript-eslint/visitor-keys": "^8.47.0",
-    "@typescript-eslint/utils": "^8.47.0",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
-    "@wix/astro": "2.23.0",
-    "@wix/astro-pages": "^2.0.1",
-    "@wix/postcss-pseudo-to-data": "^1.0.0",
-    "@wix/babel-plugin-jsx-dynamic-data": "1.0.13",
-    "@wix/babel-plugin-jsx-source-attrs": "^1.1.0",
-    "@wix/wix-data-items-sdk": "^1.0.469",
-    "@wix/benefit-programs": "^1.0.121",
-    "@wix/blog": "^1.0.557",
-    "@wix/bookings": "^1.0.1256",
-    "@wix/multilingual": "^1.0.245",
-    "@wix/categories": "^1.0.133",
-    "@wix/cloud-provider-fetch-adapter": "^1.0.4",
-    "@wix/dashboard": "^1.3.39",
-    "@wix/data": "^1.0.376",
-    "@wix/design-system": "^1.199.0",
-    "@wix/ecom": "^1.0.1706",
-    "@wix/essentials": "^1.0.1",
-    "@wix/events": "1.0.705",
-    "@wix/faq": "^1.0.42",
-    "@wix/fast-gallery-vibe": "1.22.0",
-    "@wix/forms": "1.0.383",
-    "@wix/headless-components": "0.0.35",
-    "@wix/image": "1.392.0",
-    "@wix/image-kit": "^1.0.0",
-    "@wix/media": "^1.0.228",
-    "@wix/members": "^1.0.304",
-    "@wix/monitoring-astro": "^2.7.0",
-    "@wix/online-programs": "^1.0.84",
-    "@wix/payments": "^1.0.91",
-    "@wix/pricing-plans": "^1.0.268",
-    "@wix/redirects": "^1.0.83",
-    "@wix/restaurants": "^1.0.466",
-    "@wix/ricos": "^10.152.0",
-    "@wix/sdk": "^1.17.8",
-    "@wix/seo": "^1.0.39",
-    "@wix/services-definitions": "^1.0.1",
-    "@wix/services-manager": "^1.0.2",
-    "@wix/services-manager-react": "^1.0.3",
-    "@wix/stores": "^1.0.633",
-    "@wix/gift-vouchers": "^1.0.61",
-    "@wix/vibe-routes-parser": "^0.0.6",
-    "@wix/wix-vibe-plugins": "^0.0.8",
+    "@typescript-eslint/utils": "^8.47.0",
+    "@typescript-eslint/visitor-keys": "^8.47.0",
     "astro": "^5.12.3",
-    "babel-plugin-transform-react-jsx-location": "^0.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -133,7 +88,6 @@
     "@types/three": "^0",
     "@typescript-eslint/eslint-plugin": "8.47.0",
     "@typescript-eslint/parser": "8.47.0",
-    "@wix/cli": "1.1.154",
     "csstype": "^3.1.3",
     "eslint": "^9.26.0",
     "eslint-plugin-astro": "^1.3.1",
@@ -153,10 +107,5 @@
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-x64-gnu": "4.45.1"
-  },
-  "overrides": {
-    "@wix/services-definitions": "^1.0.1",
-    "@wix/services-manager": "^1.0.2",
-    "@wix/services-manager-react": "^1.0.3"
   }
 }
